--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Virtual Estate</title>
 		<style>
 			body{
 				margin: 0;
@@ -11,6 +12,29 @@
 			.container-fluid{
 				background-color: rgb(124, 156, 229);
 			}
+			.btn-style-two {
+				position: relative;
+				text-decoration: none;
+				padding: 20px 30px;
+				line-height: 28px;
+				background: #00c0ff;
+				font-weight: 400;
+				border: 2px solid #00c0ff;
+				color: #ffffff;
+				letter-spacing: 1px;
+				text-transform: uppercase;
+				text-align: center;
+				font-family: 'Montserrat', sans-serif;
+				border-radius: 5px;
+				transition: all 0.5s ease;
+				-moz-transition: all 0.5s ease;
+				-webkit-transition: all 0.5s ease;
+				-ms-transition: all 0.5s ease;
+				-o-transition: all 0.5s ease;
+				background: rgba(0,0,0,0);
+				color: black;
+				font-size: 25px;
+			}
 		</style>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r69/three.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,36 +44,172 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
   		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/navstyle.css')}}">
 	</head>
 <body>
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Page 1</a></li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
-    </ul>
-  </div>
-</nav>
+<header class="main-header header-style-one">
+        <!--Header Top-->
+        <div class="header-top">
+            <div class="auto-container">
+                <div class="inner-container clearfix">
+                    <div class="top-left">
+                        <ul class="contact-list clearfix">
+                            <li><i class="la la-home"></i></li>
+                            <li><i class="la la-envelope-o"></i><a href="#"></a></li>
+                        </ul>
+                    </div>
+                    <div class="top-right">
+                        <div>
+
+
+                        </div>
+                        <!-- <div class="btn-box"><a href="admin/submit-property.html" class="theme-btn btn-style-four">Submit Property</a></div> -->
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- End Header Top -->
+
+        <!-- Header Lower -->
+        <div class="header-lower">
+            <div class="main-box">
+                <div class="auto-container">
+                    <div class="inner-container clearfix">
+                        <div class="logo-box">
+                            <div class="logo"><img src="download.png"  alt="" title=""></a></div>
+                        </div>
+
+                        <div class="nav-outer">
+                            <!-- Main Menu -->
+                            <nav class="main-menu navbar-expand-md navbar-light">
+                                <div class="navbar-header">
+                                    <!-- Toggle Button -->
+                                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                                        <span class="icon flaticon-menu"></span>
+                                    </button>
+                                </div>
+
+                                <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
+                                    <ul class="navigation clearfix">
+                                        {% if session['name'] %}
+                                        <li class="current dropdown"><a href="#">Home</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li class="dropdown"><a href="#">About</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li class="dropdown"><a href="#">Agents</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li class="dropdown"><a href="#">Properties</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li class="dropdown"><a href="#">Blog</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li><a href="contact.html">Contact</a></li>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li><a href="/logout">Logout</a></li>
+                                        {% else %}
+                                        <li class="current dropdown"><a href="#">Home</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li class="dropdown"><a href="#">About</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li class="dropdown"><a href="#">Agents</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li class="dropdown"><a href="#">Properties</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li class="dropdown"><a href="#">Blog</a>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li><a href="contact.html">Contact</a></li>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li><a href="/login">Login</a></li>
+
+                                        <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                        <li><a href="/register">Register</a></li>
+                                        {% endif %}
+                                    </ul>
+                                </div>
+                            </nav>
+
+                            <!-- Main Menu End-->
+                            <div class="outer-box clearfix">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End Header Lower-->
+
+        <!-- Sticky Header  -->
+        <div class="sticky-header">
+          <div class="sticky-header animated slidedown">
+              <div class="auto-container clearfix">
+                <!--Logo-->
+                <div class="logo pull-left">
+                    <a href="index.html" title=""><img src="download.png" alt="" title="" height: 100px;
+    width: 200px;></a>
+                </div>
+                <!--Right Col-->
+                <div class="pull-right">
+                    <!-- Main Menu -->
+                    <nav class="main-menu">
+                        <div class="navbar-collapse show collapse clearfix">
+                            <ul class="navigation clearfix">
+                                <li class="current dropdown"><a href="#">Home</a>
+
+                                <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                <li class="dropdown"><a href="#">About</a>
+
+                                <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                <li class="dropdown"><a href="#">Agents</a>
+
+                                <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                <li class="dropdown"><a href="#">Properties</a>
+
+                                <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                <li class="dropdown"><a href="#">Blog</a>
+
+                                <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                                <li><a href="contact.html">Contact</a></li>
+                                <li class="dropdown has-mega-menu"><a href="#">Pages</a>
+                                    <div class="mega-menu">
+                                        <div class="mega-menu-bar row clearfix">
+
+                                        </div>
+                                    </div>
+                                <div class="dropdown-btn"><span class="la la-angle-down"></span></div></li>
+                            </ul>
+                        </div>
+                    </nav><!-- Main Menu End-->
+                </div>
+            </div>
+        </div>
+        </div><!-- End Sticky Menu -->
+    </header>
+<div class="container" style="margin-top: -20px; position: relative;">
 <span>
 <script src="{{url_for('static', filename='panaroma.js')}}"></script>
+	<!--<button class="btn-style-two" style="position: absolute; z-index: 2; margin: 100px 490px">Click Here</button>-->
+	<!--<button class="btn-style-two" style="position: absolute; z-index: 2; margin: 100px 490px">Click Here</button>-->
 </span>
-
-<!--		<div class="container">-->
-<!--			<div class="col-sm-4">-->
-<!--				<script src="{{url_for('static', filename='panaroma.js')}}"></script>-->
-<!--			</div>-->
-<!--		</div>-->
-	<h1>Hello world</h1>
-	<h1>Hello world</h1>
-	<h1>Hello world</h1>
-	<h1>Hello world</h1>
-	<h1>Hello world</h1>
-	<h1>Hello world</h1>
-	<h1>Hello world</h1>
+</div>
+<div class="row" style="margin-left: 20px;">
+        <h2>Welcome</h2>
+        {% if session['name'] %}
+        <p>You login as {{ session['name'] }}</p>
+        {% else %}
+        <p>Not login yet</p>
+        {% endif %}
+</div>
 </body>
 </html>
